--- a/test/Makefile
+++ b/test/Makefile
@@ -6,6 +6,8 @@ CPPUTEST_HOME=/home/John/cpputest
 #SRC_DIRS=$(PROJECT_DIR)/src
 INCLUDE_DIRS=$(PROJECT_DIR)/src
 INCLUDE_DIRS+=$(CPPUTEST_HOME)/include
+INCLUDE_DIRS+=$(RACK_DIR)/include
+INCLUDE_DIRS+=$(RACK_DIR)/dep/include
 TEST_SRC_DIRS=$(TEST_DIR)
 TEST_TARGET=test_runner
 
